<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray"
       >
    </View>
    <Button
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:background="@drawable/favourite_button_selector"
        android:layout_margin="16dp"
        android:id="@+id/add_to_favourites"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_height="wrap_content"
        android:text="@string/favourite_button_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:textSize="34sp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:text="@string/trailers_title"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recyclerView_trailers"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
        <ProgressBar
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:id="@+id/list_progress_bar"
            android:visibility="invisible"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/error_message_display_details_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/no_trailers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_trailers"
            android:textSize="20sp"
            android:visibility="invisible" />
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="34sp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:text="@string/reviews_title"
        />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/recyclerView_reviews"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
        <ProgressBar
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:id="@+id/list_progress_bar_1"
            android:visibility="invisible"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/error_message_display_details_activity_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/no_reviews_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_review_for_movie"
            android:textSize="20sp"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>